kustomize-incomplete/firefly/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"firefly-iii"},"name":"firefly-iii-db-mysql","namespace":"firefly"},"spec":{"selector":{"matchLabels":{"app":"firefly-iii","tier":"mysql"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"firefly-iii","tier":"mysql"}},"spec":{"containers":[{"env":[{"name":"MYSQL_ROOT_PASSWORD","valueFrom":{"secretKeyRef":{"key":"DB_PASSWORD","name":"firefly-iii-secret"}}}],"image":"yobasystems [...]
    creationTimestamp: "2023-08-10T10:57:22Z"
    generation: 2
    labels:
      app: firefly-iii
    name: firefly-iii-db-mysql
    namespace: firefly
    resourceVersion: "23812600"
    uid: de12e925-7bf2-4878-9c20-48e99c3bac17
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: firefly-iii
        tier: mysql
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: firefly-iii
          tier: mysql
      spec:
        containers:
        - env:
          - name: MYSQL_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: DB_PASSWORD
                name: firefly-iii-secret
          image: yobasystems/alpine-mariadb:latest
          imagePullPolicy: Always
          name: mysql
          ports:
          - containerPort: 3306
            name: mysql
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-persistent-storage
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: firefly-iii-db-mysql
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-01-29T11:17:47Z"
      lastUpdateTime: "2025-01-29T11:17:47Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-08-10T10:57:22Z"
      lastUpdateTime: "2025-01-29T11:17:47Z"
      message: ReplicaSet "firefly-iii-db-mysql-68bcbc84cf" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "5"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"firefly-iii"},"name":"firefly-iii","namespace":"firefly"},"spec":{"selector":{"matchLabels":{"app":"firefly-iii","tier":"frontend"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"firefly-iii","tier":"frontend"}},"spec":{"containers":[{"env":[{"name":"APP_ENV","valueFrom":{"configMapKeyRef":{"key":"APP_ENV","name":"firefly-iii-configmap"}}},{"name":"APP_KEY","valueFrom":{"se [...]
    creationTimestamp: "2023-08-10T11:02:43Z"
    generation: 5
    labels:
      app: firefly-iii
    name: firefly-iii
    namespace: firefly
    resourceVersion: "23812656"
    uid: c108eac4-3b0b-4502-b904-94e176b5a367
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: firefly-iii
        tier: frontend
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2023-08-29T19:21:59Z"
        creationTimestamp: null
        labels:
          app: firefly-iii
          tier: frontend
      spec:
        containers:
        - env:
          - name: APP_ENV
            valueFrom:
              configMapKeyRef:
                key: APP_ENV
                name: firefly-iii-configmap
          - name: APP_KEY
            valueFrom:
              secretKeyRef:
                key: APP_KEY
                name: firefly-iii-secret
          - name: DB_HOST
            valueFrom:
              configMapKeyRef:
                key: DB_HOST
                name: firefly-iii-configmap
          - name: DB_CONNECTION
            valueFrom:
              configMapKeyRef:
                key: DB_CONNECTION
                name: firefly-iii-configmap
          - name: DB_DATABASE
            valueFrom:
              configMapKeyRef:
                key: DB_DATABASE
                name: firefly-iii-configmap
          - name: DB_USERNAME
            valueFrom:
              configMapKeyRef:
                key: DB_USERNAME
                name: firefly-iii-configmap
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: DB_PASSWORD
                name: firefly-iii-secret
          - name: TRUSTED_PROXIES
            valueFrom:
              configMapKeyRef:
                key: TRUSTED_PROXIES
                name: firefly-iii-configmap
          image: fireflyiii/core:version-6.0.20
          imagePullPolicy: Always
          name: firefly-iii
          ports:
          - containerPort: 8080
            name: firefly-iii
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/www/html/storage/upload
            name: firefly-iii-upload
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: firefly-iii-upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-01-29T11:18:01Z"
      lastUpdateTime: "2025-01-29T11:18:01Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-08-10T11:02:43Z"
      lastUpdateTime: "2025-01-29T11:18:01Z"
      message: ReplicaSet "firefly-iii-6957bc6b89" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 5
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
