kustomize-incomplete/firefly/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"traefik"},"labels":{"app":"firefly-iii"},"name":"firefly-iii-ingress","namespace":"firefly"},"spec":{"rules":[{"host":"firefly.stillon.top","http":{"paths":[{"backend":{"service":{"name":"firefly-iii","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["firefly.stillon.top"],"secretName":"firefly.stil [...]
      kubernetes.io/ingress.class: traefik
    creationTimestamp: "2023-08-10T10:54:07Z"
    generation: 1
    labels:
      app: firefly-iii
    name: firefly-iii-ingress
    namespace: firefly
    resourceVersion: "616083"
    uid: b64eb2bc-f28a-48ba-a1cb-7cd7675e6b1d
  spec:
    rules:
    - host: firefly.stillon.top
      http:
        paths:
        - backend:
            service:
              name: firefly-iii
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - firefly.stillon.top
      secretName: firefly.stillon.top-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
