kustomize-incomplete/firefly/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"firefly-iii"},"name":"firefly-iii","namespace":"firefly"},"spec":{"clusterIP":"None","ports":[{"port":8080}],"selector":{"app":"firefly-iii","tier":"frontend"}}}
    creationTimestamp: "2023-08-10T10:54:50Z"
    labels:
      app: firefly-iii
    name: firefly-iii
    namespace: firefly
    resourceVersion: "616103"
    uid: 23c79e4a-8210-481f-8eba-5659b998715d
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: firefly-iii
      tier: frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"firefly-iii"},"name":"firefly-iii-db-mysql","namespace":"firefly"},"spec":{"clusterIP":"None","ports":[{"port":3306}],"selector":{"app":"firefly-iii","tier":"mysql"}}}
    creationTimestamp: "2023-08-10T10:55:41Z"
    labels:
      app: firefly-iii
    name: firefly-iii-db-mysql
    namespace: firefly
    resourceVersion: "616128"
    uid: 72fd2a9f-e166-4429-a069-881b3825764b
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: firefly-iii
      tier: mysql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
